ADD_LIBRARY(MyStaticLib STATIC student.cpp)
enable_testing()
SET(APP_EXE demo)
SET(TEST1 test1)
SET(TEST2 test2)
ADD_EXECUTABLE(${APP_EXE} demo.cpp)
TARGET_LINK_LIBRARIES(${APP_EXE} MyStaticLib)
ADD_EXECUTABLE(${TEST1} test1.cpp)
TARGET_LINK_LIBRARIES(${TEST1} MyStaticLib)
ADD_EXECUTABLE(${TEST2} test2.cpp)
TARGET_LINK_LIBRARIES(${TEST2} MyStaticLib)
cmake_minimum_required(VERSION 2.8)
